--- a/budget_bridge/src/main/resources/groupid/style.css
+++ b/budget_bridge/src/main/resources/groupid/style.css
@@ -1,35 +1,18 @@
-.region-box {
-    -fx-background-color: #1e1e1e;
-    -fx-padding: 20;
-    -fx-background-radius: 8;
-    -fx-spacing: 10;
-    -fx-pref-width: 100%;
-    -fx-pref-height: 100%;
-    -fx-border-color: #3a3a3a;
-    -fx-border-width: 1;
-    -fx-border-radius: 8;
-    -fx-text-fill: white;
+.expense {
+    -fx-text-fill: #FF8C42; /* Soft orange */
+    -fx-font-weight: bold;
+    -fx-font-size: 14px;
 }
 
-.top-section {
-    -fx-background-color: #0a0b0d;
-}
-
-.center-section {
-    -fx-background-color: #121212;
-}
-
-.modern-vbox {
-    -fx-background-color: #1e1e1e;
-    -fx-padding: 30 20 30 20; /* top, right, bottom, left */
-    -fx-background-radius: 8;
-    -fx-spacing: 20;
-    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 6, 0, 0, 1);
+.income {
+    -fx-text-fill: #00E5FF; /* Vibrant cyan */
+    -fx-font-weight: bold;
+    -fx-font-size: 14px;
 }
 
 .modern-menu-bar {
-    -fx-background-color: #FFFFFF;
-    -fx-padding: 5 10;
+    -fx-background-color: #ffffff;
+    -fx-padding: 22 35;
     -fx-background-radius: 6px;
     -fx-border-color: transparent;
     -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 2, 0, 0, 1);
@@ -40,7 +23,7 @@
     -fx-font-family: "Helvetica", "Arial", sans-serif;
     -fx-font-size: 18px;
     -fx-font-weight: 600;
-    -fx-text-fill: #c90d0d;
+    -fx-text-fill: #ffffff;
     -fx-padding: 8 14;
     -fx-background-color: transparent;
 }
