changed record/version, try running

--- a/budget_bridge/src/main/resources/groupid/leaderboard.fxml
+++ b/budget_bridge/src/main/resources/groupid/leaderboard.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.textfield.*?>
 
 <!-- WORK IN PROGRESS -->
-<BorderPane stylesheets="@style.css" fx:controller="groupid.SecondaryController" xmlns:fx="http://javafx.com/fxml/1" styleClass="background">
+<BorderPane stylesheets="@style.css" fx:controller="groupid.LeaderboardController" xmlns:fx="http://javafx.com/fxml/1" styleClass="background">
    <top>
       <VBox alignment="CENTER">
          <children>
@@ -125,6 +125,6 @@
     -->
 
     <center>
-        <Label text="BUDGET SCREEN" styleClass="norm-text"/>
+        <Label text="LEADERBOARD" styleClass="norm-text"/>
     </center>
 </BorderPane>
