--- a/budget_bridge/src/main/resources/groupid/leaderboard.fxml
+++ b/budget_bridge/src/main/resources/groupid/leaderboard.fxml
@@ -46,12 +46,21 @@
    </top>
 
     <center>
-        <Label text="LEADERBOARD" styleClass="norm-text"/>
-         <ScrollPane styleClass="scrollpane" fitToWidth="true" prefHeight="500">
-            <content>
-               <VBox fx:id="leaderboardVBox" styleClass="leaderVbox"> </VBox>
-            </content>
-         </ScrollPane>
+         <VBox>
+            <HBox alignment="CENTER_LEFT" spacing="20">
+               <Label fx:id="userLabel" styleClass="heading"/>
+               <Label text="200 Points" styleClass="leaderboard-points" />
+               <Label text="LEAGUE: BRONZE" styleClass="heading" />
+            </HBox>
+            <padding>
+               <Insets bottom="25" left="25" right="25" top="25" />
+            </padding>
 
+            <ScrollPane styleClass="scrollpane" fitToWidth="true" prefHeight="500">
+               <content>
+                  <VBox fx:id="leaderboardVBox" styleClass="leaderVbox"> </VBox>
+               </content>
+            </ScrollPane>
+         </VBox>
     </center>
 </BorderPane>
