added the user to the leaderboard in the correct spot on the leaderboard

--- a/budget_bridge/src/main/resources/groupid/leaderboard.fxml
+++ b/budget_bridge/src/main/resources/groupid/leaderboard.fxml
@@ -48,8 +48,8 @@
     <center>
          <VBox>
             <HBox alignment="CENTER_LEFT" spacing="20">
-               <Label fx:id="userLabel" styleClass="heading"/>
-               <Label text="200 Points" styleClass="leaderboard-points" />
+               <Label fx:id="userLabel" styleClass="big-heading"/>
+               <Label fx:id="userPoints" styleClass="leaderboard-points" />
                <Label text="LEAGUE: BRONZE" styleClass="heading" />
             </HBox>
             <padding>
