--- a/budget_bridge/src/java/groupid/leaderboard.fxml
+++ b/budget_bridge/src/java/groupid/leaderboard.fxml
@@ -6,7 +6,6 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.Menu?>
@@ -18,7 +17,7 @@
 <?import javafx.scene.textfield.*?>
 
 <!-- WORK IN PROGRESS -->
-<BorderPane stylesheets="@style.css" fx:controller="groupid.SecondaryController" xmlns:fx="http://javafx.com/fxml/1" styleClass="background">
+<BorderPane stylesheets="@style.css" fx:controller="groupid.LeaderboardController" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox alignment="CENTER">
          <children>
@@ -26,10 +25,10 @@
                <children>
                   <MenuBar styleClass="modern-menu-bar">
                      <Menu text ="≡" styleClass="modern-menu">
-                        <MenuItem fx:id="profileButton" text="Profile" styleClass="menu-item" onAction="#switchToProfile"/>
-                        <MenuItem fx:id="settingsButton" text="Settings" styleClass="menu-item" onAction="#switchToSettings"/>
-                        <MenuItem fx:id="tutorialButton" text="Tutorial" styleClass="menu-item" onAction="#switchToTutorial"/>
-                        <MenuItem fx:id="logoffButton" text="Logoff" styleClass="menu-item" onAction="#logoff"/>
+                        <MenuItem text="Profile" styleClass="menu-item"/>
+                        <MenuItem text="Settings" styleClass="menu-item"/>
+                        <MenuItem text="Tutorial" styleClass="menu-item"/>
+                        <MenuItem text="Logoff" styleClass="menu-item"/>
                      </Menu>
                   </MenuBar>
 
@@ -125,22 +124,7 @@
 
     -->
 
-    <left>
-         <Label text="INCOMES" styleClass="norm-text"/>
-         <VBox>
-            <TextField fx:id="incomeTypeInput" promptText="Please enter an income item" />
-            <TextField fx:id="incomeAmountInput" promptText="Please enter an income amount" />
-            <Button text="Add" onAction="#addInputIncome" />
-            <ListView fx:id="incomeList" />
-         </VBox>
-    </left>
-    <right>
-         <Label text="EXPENSES" styleClass="norm-text"/>
-         <VBox>
-            <TextField fx:id="expenseTypeInput" promptText="Please enter an expense item" />
-            <TextField fx:id="expenseAmountInput" promptText="Please enter an expense amount" />
-            <Button text="Add" onAction="#addInputExpense" />
-            <ListView fx:id="expenseList" />
-         </VBox>
-    </right>
+    <center>
+        <Label text="LEADERBOARD"/>
+    </center>
 </BorderPane>
